scroll-snap-stop: always not respected during momentum scrolling https://bugs.webkit.org/show_bug.cgi?id=223406

Patch by Martin Robinson <mrobinson@igalia.com> on 2021-03-19
Reviewed by Simon Fraser.

Source/WebCore:

Test: tiled-drawing/scrolling/scroll-snap/scroll-snap-stop-momentum-scroll.html

* platform/ScrollSnapAnimatorState.cpp:
(WebCore::ScrollSnapAnimatorState::targetOffsetForStartOffset const): Enable directional scroll
snapping when handling momentum scrolling. This turns on scroll-snap-stop as well as a few other
features.

LayoutTests:

* tiled-drawing/scrolling/scroll-snap/scroll-snap-stop-momentum-scroll-expected.txt: Added.
* tiled-drawing/scrolling/scroll-snap/scroll-snap-stop-momentum-scroll.html: Added.

Canonical link: https://commits.webkit.org/235546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274726 268f45cc-cd09-0410-ab3c-d52691b4dbfc