Source/WebCore/platform/ScrollSnapAnimatorState.cpp
@@ -99,7 +99,7 @@ float ScrollSnapAnimatorState::targetOffsetForStartOffset(ScrollEventAxis axis, 
         return clampTo<float>(startOffset, 0, maxScrollOffset);
     }
 
-    float targetOffset = m_snapOffsetsInfo.closestSnapOffset(axis, LayoutUnit(predictedOffset / pageScale), initialDelta).first;
+    float targetOffset = m_snapOffsetsInfo.closestSnapOffset(axis, LayoutUnit(predictedOffset / pageScale), initialDelta, LayoutUnit(startOffset / pageScale)).first;
     float minimumTargetOffset = std::max<float>(0, snapOffsets.first().offset);
     float maximumTargetOffset = std::min<float>(maxScrollOffset, snapOffsets.last().offset);
     targetOffset = clampTo<float>(targetOffset, minimumTargetOffset, maximumTargetOffset);
